@@ -18,6 +18,9 @@
  ****************************************************************/
 package org.apache.cayenne.query;
 
+import java.util.HashMap;
+import java.util.Map;
+
 import org.apache.cayenne.DataRow;
 import org.apache.cayenne.QueryResult;
 import org.apache.cayenne.access.DataContext;
@@ -113,5 +116,28 @@ public class SQLExecIT extends ServerCase {
         assertEquals(1, inserted);
         assertEquals(55L, dbHelper.getLong("ARTIST", "ARTIST_ID"));
         assertEquals("a3", dbHelper.getString("ARTIST", "ARTIST_NAME").trim());
+    }
+
+    @Test
+    public void test_Execute_MultipleArrayBind() throws Exception {
+        SQLExec inserter = SQLExec.query("INSERT INTO ARTIST (ARTIST_ID, ARTIST_NAME) VALUES (#bind($id), #bind($name))");
+        for(int i = 0; i < 2; i++) {
+            QueryResult<?> result = inserter.paramsArray(i, "artist " + i).execute(context);
+            assertEquals(1, result.firstUpdateCount());
+        }
+        assertEquals(2, dbHelper.getRowCount("ARTIST"));
+    }
+
+    @Test
+    public void test_Execute_MultipleMapBind() throws Exception {
+        SQLExec inserter = SQLExec.query("INSERT INTO ARTIST (ARTIST_ID, ARTIST_NAME) VALUES (#bind($id), #bind($name))");
+        for(int i = 0; i < 2; i++) {
+            Map<String, Object> params = new HashMap<>();
+            params.put("id", i);
+            params.put("name", "artist " + i);
+            QueryResult<?> result = inserter.params(params).execute(context);
+            assertEquals(1, result.firstUpdateCount());
+        }
+        assertEquals(2, dbHelper.getRowCount("ARTIST"));
     }
 }
