@@ -31,6 +31,7 @@ CAY-2459 Modeler: DataMap paste function is not working
 CAY-2462 Modeler: Clipboard holds old content after application was reloaded
 CAY-2463 Modeler: DB Schema generation doesn't work
 CAY-2464 ClassCastException when returning PRUNED_NODE in expression transformer
+CAY-2470 Can't bind SQLExec parameters in a loop
 
 ----------------------------------
 Release: 4.1.M2
